<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".introMenu_fragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragtitle"
                android:layout_width="269dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="¡A conocer el campus!"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonClose"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="6dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@android:drawable/ic_menu_close_clear_cancel" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:gravity="center_horizontal"
            android:text="TextView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/captura_intromenu" />

    </LinearLayout>

</FrameLayout>